# moon-mars-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: help_wanted.md
.github/workflows/: build.yml  ci.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: base.css
src/components/charts/: BaseChart.vue
src/components/systemBar/: systemBar.vue
src/components/topBar/: topBar.vue
src/hooks/: useTableHeight.ts
src/layout/: index.vue
src/locales/: index.ts
src/locales/lang/: en.ts  zh-cn.ts
src/router/: index.ts
src/theme/: theme.ts
src/utils/: index.ts
src/views/analytics/dashboard/: index.vue
src/views/analytics/photoAlbum/: index.vue
src/views/analytics/reports/: index.vue
src/views/home/: index.vue
src/views/permissions/product/: index.vue
src/views/permissions/roles/: index.vue
src/views/permissions/users/: index.vue
src/views/settings/account/: index.vue
src/views/settings/profile/: index.vue
src/views/settings/system/: index.vue
types/: components.d.ts
